unpackaged/main/default/objects/Campaign_Shops__c/Campaign_Shops__c.object-meta.xml
<CustomObject>
    <label>Campaign Shop</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Campaign Shops Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Shops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>