unpackaged/main/default/objects/Campaign_Shops__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Shops</relationshipLabel>
    <relationshipName>Campaign_Shops</relationshipName>
    <type>Lookup</type>
</CustomField>