unpackaged/main/default/objects/Campaign_Shops__c/fields/Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Head_Office__c</fullName>
    <label>Head Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Head Office, IKA Head Office, NKA Head Office, NKA In-Fill Head Office, IKA In-Fill Head Office</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Shops</relationshipLabel>
    <relationshipName>Campaign_Shops</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>