unpackaged/main/default/objects/Campaign_Shops__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>Shop__r.Owner.FirstName &amp; &quot; &quot; &amp;  Shop__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>