unpackaged/main/default/objects/Campaign_Shops__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Shop</value>
        </filterItems>
        <filterItems>
            <field>Account.Parent.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Head_Office__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaign_Shops1</relationshipName>
    <type>Lookup</type>
</CustomField>