unpackaged/main/default/objects/Campaign_Shops__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <formula>Shop__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>